# llama_cpp_android_ci

./: CMakeLists.txt  Llama.java  README.md  library.cpp
.github/workflows/: weekly-build.yml
